--- a/web/css/main.css
+++ b/web/css/main.css
@@ -301,7 +301,7 @@ header {
 .page-title ul.stats li .graph {
     float: left;
     margin: 2px 0 0 0;
-    width: 60px; }
+    width: 40px; }
 .page-title ul.stats li .details {
     float: left;
     margin-left: 10px;
@@ -1846,4 +1846,34 @@ ul.roman-list {
 
 .col-md-12{
     background-color: #F9F9FF;
+}
+.logoLockOpen {
+    float:left;
+    height:64px;
+    width:64px;
+    margin-top:10px;
+    margin-bottom: 10px;
+    margin-left: 10%;
+    background:url(../images/img/lock-icon.png) no-repeat;
+}
+.panel-heading {
+padding: 12px 20px;
+border: 0;
+border-bottom: 1px;
+border-style: solid;
+-webkit-border-radius: 3px 3px 0 0;
+-moz-border-radius: 3px 3px 0 0;
+border-radius: 3px 3px 0 0;
+}
+
+.panel-default > .panel-heading {
+color: #3784b1;
+border-bottom: 1px solid #c3ddec;
+background-color: #edf5fa;
+background-image: -webkit-gradient(linear, left top, left bottom, from(#fdfefe), to(#edf5fa));
+background-image: -webkit-linear-gradient(top, #fdfefe, #edf5fa);
+background-image: -moz-linear-gradient(top, #fdfefe, #edf5fa);
+background-image: -ms-linear-gradient(top, #fdfefe, #edf5fa);
+background-image: -o-linear-gradient(top, #fdfefe, #edf5fa);
+background-image: linear-gradient(top, #fdfefe, #edf5fa);
 }
